syntax = "proto3";

package grpc;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/rezaAmiri123/microservice/service_finance/proto/grpc";

message Account {
    string account_id = 1;
    string owner_id = 2;
    int64 balance = 3;
    string currency = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}
